fixed gap in borders

--- a/App/client/css/main.css
+++ b/App/client/css/main.css
@@ -62,6 +62,7 @@ body{
 
 hr.solid {
     border-top: 3px solid #FFFFFF;
+    margin-bottom: 0;
   }
 
   .vl {
